updates to notebooks

--- a/notebooks/baseline_clasp.ipynb
+++ b/notebooks/baseline_clasp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7558638f",
+   "id": "d369c646",
    "metadata": {},
    "source": [
     "# Required Packages:\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e95ba33f",
+   "id": "1978e2ec",
    "metadata": {},
    "source": [
     "# Loading the Data"
@@ -51,7 +51,7 @@
     "def load_data():\n",
     "    np_cols = [\"x-acc\", \"y-acc\", \"z-acc\", \"x-gyro\", \"y-gyro\", \n",
     "               \"z-gyro\", \"x-mag\", \"y-mag\", \"z-mag\", \n",
-    "               \"activities\", \"lat\", \"lon\", \"speed\"]\n",
+    "               \"lat\", \"lon\", \"speed\"]\n",
     "    converters = {col : lambda val: np.array([]) if len(val) == 0 else np.array(eval(val)) for col in np_cols}\n",
     "    return pd.read_csv(\"../datasets/har_challenge_no_labels.csv.gz\", converters=converters, compression=\"gzip\")\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84631a04",
+   "id": "704e29ef",
    "metadata": {},
    "source": [
     "# Segmentation\n",
