--- a/notebooks/baseline_floss.ipynb
+++ b/notebooks/baseline_floss.ipynb
@@ -55,7 +55,7 @@
     "def load_data():\n",
     "    np_cols = [\"x-acc\", \"y-acc\", \"z-acc\", \"x-gyro\", \"y-gyro\", \n",
     "               \"z-gyro\", \"x-mag\", \"y-mag\", \"z-mag\", \n",
-    "               \"activities\", \"lat\", \"lon\", \"speed\"]\n",
+    "               \"lat\", \"lon\", \"speed\"]\n",
     "    converters = {col : lambda val: np.array([]) if len(val) == 0 else np.array(eval(val)) for col in np_cols}\n",
     "    return pd.read_csv(\"../datasets/har_challenge_no_labels.csv.gz\", converters=converters, compression=\"gzip\")\n",
     "\n",
