updates to notebooks

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "9edc22e7",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "e2d2cd18",
    "metadata": {
     "scrolled": false
@@ -126,12 +126,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0a35371387841aa936f6f06c48a28b5",
+       "model_id": "1023d93a57354c34922efb215681e071",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='selection', index=213, options=(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, …"
+       "interactive(children=(Dropdown(description='selection', options=(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,…"
       ]
      },
      "metadata": {},
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "5536b254",
    "metadata": {},
    "outputs": [
