--- a/notebooks/baseline_clasp.ipynb
+++ b/notebooks/baseline_clasp.ipynb
@@ -53,7 +53,8 @@
     "               \"z-gyro\", \"x-mag\", \"y-mag\", \"z-mag\", \n",
     "               \"lat\", \"lon\", \"speed\"]\n",
     "    converters = {col : lambda val: np.array([]) if len(val) == 0 else np.array(eval(val)) for col in np_cols}\n",
-    "    return pd.read_csv(\"../datasets/har_challenge_no_labels.csv.gz\", converters=converters, compression=\"gzip\")\n",
+    "    return pd.read_csv(\"../datasets/har_challenge_no_labels.csv.zip\", \n",
+    "                       converters=converters, compression=\"zip\")\n",
     "\n",
     "df = load_data()"
    ]
