--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -69,7 +69,8 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../datasets/har_challenge_no_labels.csv.gz\", converters=converters, compression=\"gzip\")"
+    "df = pd.read_csv(\"../datasets/har_challenge_no_labels.csv.zip\", \n",
+    "                 converters=converters, compression=\"zip\")"
    ]
   },
   {
@@ -126,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1023d93a57354c34922efb215681e071",
+       "model_id": "54c4f91f7acd45dc8831bf9c3d06a038",
        "version_major": 2,
        "version_minor": 0
       },
