--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -88,8 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_activity_data(\n",
-    "    ts_name, sensor_names, T, sample_rate = 50, font_size=14):\n",
+    "def plot_activity_data(sensor_names, T, sample_rate = 50, font_size=14):\n",
     "    fig, axes = plt.subplots(len(T), sharex=True, gridspec_kw={'hspace': .15}, figsize=(20, len(T) * 1))\n",
     "    \n",
     "    for ts, sensor, ax in zip(T, sensor_names, axes):\n",
@@ -103,7 +102,7 @@
     "        for tick in ax.yaxis.get_major_ticks():\n",
     "            tick.label.set_fontsize(font_size)\n",
     "\n",
-    "    axes[0].set_title(ts_name, fontsize=font_size)\n",
+    "    # axes[0].set_title(fontsize=font_size)\n",
     "    axes[-1].set_xticklabels([f\"{int(tick / sample_rate)}s\" for tick in  axes[-1].get_xticks()])\n",
     "    return ax"
    ]
@@ -127,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54c4f91f7acd45dc8831bf9c3d06a038",
+       "model_id": "69491947e5a14ef6b16722bf3d518883",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,12 +139,10 @@
     }
    ],
    "source": [
-    "\n",
     "@interact(selection=range(len(df)))\n",
     "def inspect(selection = 0):\n",
     "    row = df.iloc[selection,:]\n",
-    "    ax = plot_activity_data(f\"Location {row.location} Subject {row.subject} Routine {row.routine}\", \n",
-    "                   df.columns[3:15], row.iloc[3:15])\n",
+    "    ax = plot_activity_data(df.columns[3:15], row.iloc[3:15])\n",
     "    plt.show()"
    ]
   },
