--- a/notebooks/baseline_ggs.ipynb
+++ b/notebooks/baseline_ggs.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "58ecaab0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# GGS Segmentation\n",
     "In this notebook, we use the GGS algorithm from the sktime package to segment the challenge data."
@@ -13,7 +17,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "694bd42c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -42,7 +50,11 @@
   {
    "cell_type": "markdown",
    "id": "a2ce68ac",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "First, we load the 250 time series (TS) as a pandas DataFrame. Each row corresponds to a twelve-dimensional TS and every column contains one channel of sensor data."
    ]
@@ -51,7 +63,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "247cc2db",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = load_data()\n",
@@ -61,7 +77,11 @@
   {
    "cell_type": "markdown",
    "id": "9cdfba52",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "For demonstration, we segment one channel and only a subset of the 250 TS. We plot the segmentations and store the change points (CPs) for the submission."
    ]
@@ -71,7 +91,10 @@
    "execution_count": 3,
    "id": "ffe48eb1",
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
